workloads/factorio/factorio.yaml
# A deployment for a factorio server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: factorio
  template:
    metadata:
      labels:
        app: factorio
    spec:
      volumes:
      - name: factorio-saves
        persistentVolumeClaim:
          claimName: factorio-saves-pvc
      - name: factorio-configs
        persistentVolumeClaim:
          claimName: factorio-configs-pvc
      - name: factorio-db
        persistentVolumeClaim:
          claimName: factorio-db-pvc
      - name: factorio-mod-packs
        persistentVolumeClaim:
          claimName: factorio-mod-packs-pvc

      containers:
      - name: factorio
        image: ofsm/ofsm:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: &http_port 80
        - containerPort: &game_port 34197
        volumeMounts:
        - mountPath: /opt/factorio/saves/
          name: factorio-saves
        - mountPath: /opt/factorio/config/
          name: factorio-configs
        - mountPath: /mnt/db
          name: factorio-db
        - mountPath: /mnt/mod_packs/
          name: factorio-mod-packs
        resources:
          requests:
            memory: "3000Mi"
            cpu: "2"

---
apiVersion: v1
kind: Service
metadata:
  name: factorio-http
spec:
  ports:
  #type: NodePort
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    #nodePort: 31180
    protocol: TCP
    name: http

  selector:
    app: factorio
---
apiVersion: v1
kind: Service
metadata:
  name: factorio-game
spec:
  type: NodePort
  ports:
  - port: 34197
    targetPort: 34197
    nodePort: 31111
    protocol: UDP

  selector:
    app: factorio
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: factorio-web
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: factorio-https
  hostnames:
    - factorio.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: factorio-http
          port: 80
