workloads/factorio/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: factorio
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: factorio-john2143-https
  hostnames:
    - factorio.john2143.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
      backendRefs:
        - name: factorio-http
          port: 80
